fix: add href to all products

--- a/templates/home/sections/banner.html.twig
+++ b/templates/home/sections/banner.html.twig
@@ -5,7 +5,7 @@
 				<div class="pt-12 mw-md mx-auto">
 					<span class="mb-4 h5">Epicerie Culinaria</span>
 					<h2 class="mt-6 mb-16 mb-lg-10">Le goût de l'authenticité</h2>
-					<a class="btn btn-secondary" href="#">Tous nos produits</a>
+					<a class="btn btn-secondary" href="/product">Tous nos produits</a>
 				</div>
 			</div>
 		</div>
