style: improve login experience and order

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,10 +41,16 @@
 						</div>
 						<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-<button class="mt-8 mt-md-8 btn bg-secondary d-block text-light hover-effect" type=" submit">
+						<button class="mt-8 mt-md-8 btn bg-secondary d-block text-light hover-effect" type=" submit">
 
 							Se connecter
 						</button>
+						<div class="mt-10">
+							Tu n'as pas de compte ?
+							<a href="{{ path('app_register') }}">
+								Inscris-toi maintenant !</a>
+						</div>
+
 					</div>
 				</div>
 			</div>
