--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -80,9 +80,9 @@
 					</div>
 				</div>
 
-				<div
-					class="d-flex justify-content-between align-items-center mt-4">{# <a href="{{ path('product_list') }}" class="btn btn-outline-secondary">Continuer vos achats</a>
-																																																																																																																																																																																			<a href="{{ path('checkout') }}" class="btn btn-primary">Procéder au paiement</a> #}
+				<div class="d-flex justify-content-between align-items-center mt-4">
+					<a href="/product" class="btn btn-outline-primary">Continuer vos achats</a>
+					<a href="/order/checkout" class="btn btn-secondary">Procéder au paiement</a>
 				</div>
 			{% endif %}
 		</div>
