--- a/templates/order/checkout.html.twig
+++ b/templates/order/checkout.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}passer la commande
+{% block title %}Passer la commande
 {% endblock %}
 
 {% block body %}
