--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -19,7 +19,7 @@
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="/product">Catalogue</a>
 					</li>
-					
+
 				</ul>
 
 				<a class="d-none d-xl-flex link-dark me-10 text-decoration-none align-items-center" href="/cart">
@@ -51,12 +51,18 @@
 									<a class="dropdown-item" href="{{path('admin')}}">Pannel administration</a>
 								</li>
 								<li>
+									<a class="dropdown-item" href="{{path('app_order_delivery')}}">Commandes</a>
+								</li>
+								<li>
 									<a class="dropdown-item" href="{{path('app_profile')}}">Profil</a>
 								</li>
 								<li>
 									<a class="dropdown-item" href="{{path('app_logout')}}">Se déconnecter</a>
 								</li>
 							{% elseif is_granted('ROLE_USER') %}
+								<li>
+									<a class="dropdown-item" href="{{path('app_order_delivery')}}">Commandes</a>
+								</li>
 								<li>
 									<a class="dropdown-item" href="{{path('app_profile')}}">Profil</a>
 								</li>
