add: add an order panel for users

--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,12 +1,56 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}passer la commande{% endblock %}
-
 {% block body %}
+	<section class="py-20">
+		<div class="container">
+			<h4 class="mb-8">Mes Commandes</h4>
 
+			<h5 class="mb-6">Commandes en attente du choix de livraison</h5>
+			{% set hasPendingOrders = false %}
+			{% for order in app.user.orders %}
+				{% if order.status == 'En attente du choix de livraison' %}
+					{% set hasPendingOrders = true %}
+					<div class="card mb-3">
+						<div class="card-body">
+							<h5 class="card-title">Commande N°
+								{{ order.reference }}</h5>
+							<p>Date:
+								{{ order.createdAt|date('d/m/Y') }}</p>
+							<p>Montant total:
+								{{ order.total }}
+								€</p>
+							<a href="{{ path('app_order_delivery') }}" class="btn btn-secondary">Confirmer la commande</a>
+						</div>
+					</div>
+				{% endif %}
+			{% endfor %}
+			{% if not hasPendingOrders %}
+				<p>Aucune commande en attente.</p>
+			{% endif %}
 
-<div >
-    <h1>Hello  ✅</h1>
-
-</div>
+			<h5 class="my-6">Commandes Validées</h5>
+			{% set hasValidatedOrders = false %}
+			{% for order in app.user.orders %}
+				{% if order.status == 'Validé' %}
+					{% set hasValidatedOrders = true %}
+					<div class="card mb-3">
+						<div class="card-body">
+							<h5 class="card-title">Commande N°
+								{{ order.reference }}</h5>
+							<p>Date:
+								{{ order.createdAt|date('d/m/Y') }}</p>
+							<p>Montant total:
+								{{ order.total }}
+								€</p>
+							<p>Statut:
+								{{ order.status }}</p>
+						</div>
+					</div>
+				{% endif %}
+			{% endfor %}
+			{% if not hasValidatedOrders %}
+				<p>Aucune commande validée.</p>
+			{% endif %}
+		</div>
+	</section>
 {% endblock %}
