--- a/templates/order/success.html.twig
+++ b/templates/order/success.html.twig
@@ -1,17 +1,32 @@
 {% extends 'base.html.twig' %}
 
+
 {% block body %}
-	<section class="py-4">
-		<div class="container">
-			<h2>Commande réussie !</h2>
-			<p>Merci pour votre commande,
-				{{ app.user.username }}.</p>
+	<style>
+		.list-detail {
+			list-style-type: none;
+			margin-bottom: 10px;
+		}
+	</style>
+	<section class="py-20">
+		<div class="container justify-content-center col-md-12 justify-content-center align-items-center  text-center">
+			<div>
+				<img src="{{ asset('/images/check.svg')}}" alt="Success" style="width: 100px;">
+			</div>
+
+			<div class="p-8 w-50 mx-auto">
+				<h3 class="bg-secondary p-5 rounded-3">Commande réussie !</h3>
+				<p>Merci pour votre commande,
+					{{ app.user.username }}.</p>
+				<p>Vous recevrez bientôt tous les détails de votre commande dans un mail récapitulatif !</p>
+			</div>
+
 
 			{% set lastOrder = app.user.orders | last %}
 
 			{% if lastOrder %}
-				<h3>Détails de la commande</h3>
-				<ul>
+				<h4>Détails de la commande</h4>
+				<ul class="mb-10 list-detail">
 					<li>Numéro de commande :
 						{{ lastOrder.reference }}</li>
 					<li>Date de la commande :
