--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -51,7 +51,7 @@
 									<a class="dropdown-item" href="{{path('admin')}}">Pannel administration</a>
 								</li>
 								<li>
-									<a class="dropdown-item" href="{{path('app_order_delivery')}}">Commandes</a>
+									<a class="dropdown-item" href="{{path('app_order')}}">Commandes</a>
 								</li>
 								<li>
 									<a class="dropdown-item" href="{{path('app_profile')}}">Profil</a>
@@ -61,7 +61,7 @@
 								</li>
 							{% elseif is_granted('ROLE_USER') %}
 								<li>
-									<a class="dropdown-item" href="{{path('app_order_delivery')}}">Commandes</a>
+									<a class="dropdown-item" href="{{path('app_order')}}">Commandes</a>
 								</li>
 								<li>
 									<a class="dropdown-item" href="{{path('app_profile')}}">Profil</a>
