feat: add a logo to email

--- a/templates/emails/order_confirmation.html.twig
+++ b/templates/emails/order_confirmation.html.twig
@@ -1,3 +1,7 @@
+<a class="flex-shrink-0 py-4" href="/">
+	<img class="" src="https://static.shuffle.dev/uploads/files/3e/3ee2673ade3684a7f46fa65550b3fd0519b1e8e9/culinaria-logo.png" alt="" width="120px">
+</a>
+
 <h1>Confirmation de Commande</h1>
 <p>Bonjour
 	{{ user.username }},</p>
