--- a/templates/home/sections/deals.html.twig
+++ b/templates/home/sections/deals.html.twig
@@ -8,7 +8,7 @@
 
 	<div class="row mt-10">
 		{% for product in topDiscountedProducts %}
-			<div class="col-md-3 mb-4 ">
+			<div class="col-12 col-md-3 mb-4">
 				<div class="card card-custom-deals position-relative">
 					<a href="/product/{{product.slug}}">
 						<div class="card-price d-flex flex-column">
