--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -3,7 +3,7 @@
 {% endblock %}
 
 {% block body %}
-	<section class="py-20">
+	<section class="py-20 col-md-10 mx-auto">
 		<div class="container">
 			<h4 class="mb-8">Mes Commandes</h4>
 
