--- a/templates/home/sections/banner.html.twig
+++ b/templates/home/sections/banner.html.twig
@@ -1,10 +1,10 @@
-<section class="position-relative overflow-hidden bs-section-dragged pt-16">
+<section class="position-relative overflow-hidden bs-section-dragged pt-md-24">
 	<div class="d-flex flex-wrap">
 		<div class="col-12 col-lg-6">
 			<div class="container mb-lg-0 mb-10">
-				<div class="pt-12 mw-md mx-auto">
+				<div class="pt-8 pt-md-12 mw-md mx-auto">
 					<span class="mb-4 h5">Epicerie Culinaria</span>
-					<h2 class="mt-6 mb-16 mb-lg-10">Le goût de l'authenticité</h2>
+					<h2 class="mt-6 mb-lg-10">Le goût de l'authenticité</h2>
 					<a class="btn btn-secondary" href="/product">Tous nos produits</a>
 				</div>
 			</div>
