--- a/templates/product/detail.html.twig
+++ b/templates/product/detail.html.twig
@@ -96,7 +96,7 @@
 						{% endfor %}
 
 					</div>
-					<div class="d-flex justify-content-center align-items-center gap-4">
+					<div class="d-flex justify-content-center align-items-center mt-6 gap-4">
 						<a href="{{path("app_cart_add", {id: product.id})}}" class="px-3 py-2 bg-secondary text-light text-decoration-none rounded-3">
 							<span>Ajouter au panier</span>
 						</a>
