--- a/templates/home/sections/deals.html.twig
+++ b/templates/home/sections/deals.html.twig
@@ -9,7 +9,12 @@
 	<div class="row mt-10">
 		{% for product in topDiscountedProducts %}
 			<div class="col-12 col-md-3 mb-4">
-				<div class="card card-custom-deals position-relative">
+				<div class="card card-custom-deals position-relative {{ product.stockquantity == 0 ? 'bg-dark' : '' }}">
+					{% if product.stockquantity == 0 %}
+						<div class="card-out-of-stock position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
+							<span class="h5 text-light">Rupture de stock</span>
+						</div>
+					{% endif %}
 					<a href="/product/{{product.slug}}">
 						<div class="card-price d-flex flex-column">
 							<span class"h6">
