style: add assets

--- a/templates/order/delivery.html.twig
+++ b/templates/order/delivery.html.twig
@@ -1,4 +1,6 @@
 {% extends 'base.html.twig' %}
+{% block title %}Infos livraison{% endblock %}
+
 
 {% block body %}
 	<section class="py-20 col-md-10 mx-auto">
