--- a/templates/order/success.html.twig
+++ b/templates/order/success.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Commande effectuée avec succès !
+{% endblock %}
+
+
 
 {% block body %}
 	<style>
